[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "romad"
version = "0.8.0"
description = "Travel networking toolkit for digital nomads"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "DJ Roma"},
]
keywords = ["vpn", "dns", "leak", "travel", "networking", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: System :: Networking",
]

[project.scripts]
romad = "romad.cli:main"

[project.urls]
Homepage = "https://github.com/ImmersionOne/romad"
Repository = "https://github.com/ImmersionOne/romad"
